--- a/index.html
+++ b/index.html
@@ -147,30 +147,30 @@
 
   <script>
     window.PHOTOS = [
+	{
+    	"src": "photos/uqat-01.jpg",
+    	"alt": "UQAT campus de Rouyn-Noranda",
+    	"w": 1600,
+    	"h": 1067
+  	},
       {
-        src: "photos/maison-lac.jpg",
-        alt: "Vue aérienne d’une maison au bord d’un lac",
-        w: 1600,
-        h: 1067,
+      "src": "photos/maison-lac.jpg",
+      "alt": "Vue aérienne d’une maison au bord d’un lac",
+      "w": 1600,
+      "h": 1067
       },
       {
-        src: "photos/orthophoto.jpg",
-        alt: "Orthomosaïque d’un ancien pit de sable — la forme rappelle un cœur",
-        w: 1600,
-        h: 1480,
+      "src": "photos/lac-paddle.jpg",
+      "alt": "Survol d'un lac pendant une activité de paddle board",
+      "w": 1600,
+      "h": 1067
       },
       {
-        src: "photos/pont-couvert.jpg",
-        alt: "Pont couvert en bois au-dessus d’une rivière entourée d’arbres",
-        w: 1600,
-        h: 1067,
-      },
-      {
-        src: "photos/lac-paddle.jpg",
-        alt: "Survol d'un lac pendant une activité de paddle board",
-        w: 1600,
-        h: 1067,
-      },
+      "src": "photos/pont-couvert-normetal.jpg",
+      "alt": "Pont couvert en bois au-dessus d’une rivière entourée d’arbres",
+      "w": 1600,
+      "h": 1067
+      }
     ];
   </script>
   <script>
