Fix image extension in about section
Changed the image source in the 'À propos de moi' section from 'davidvendette.dv' to 'davidvendette.jpg' to use the correct file extension.

--- a/index.html
+++ b/index.html
@@ -104,20 +104,6 @@
       </div>
     </section>
 
-    <section class="about" id="a-propos">
-      <div class="copy">
-        <h2>À propos de moi</h2>
-        <p>
-          Je m’appelle David Vendette, pilote de drone certifié et passionné par l’imagerie aérienne.
-          J’adore raconter des histoires visuelles claires qui mettent en valeur les paysages et projets de l’Abitibi-Témiscamingue.
-          Chaque mandat est l’occasion de livrer des images précises, professionnelles et adaptées à vos besoins.
-        </p>
-      </div>
-      <figure>
-        <img src="photos/davidvendette.dv" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
-      </figure>
-    </section>
-
     <section id="services" class="grid" aria-label="Services">
       <div class="card">
         <h3>📸 Photos aériennes</h3>
@@ -145,7 +131,21 @@
       <!-- Conteneur vide, rempli dynamiquement par gallery.js -->
       <div id="gallery" class="gallery"></div>
     </section>
-
+    
+    <section class="about" id="a-propos">
+      <div class="copy">
+        <h2>À propos de moi</h2>
+        <p>
+          Je m’appelle David Vendette, pilote de drone certifié et passionné par l’imagerie aérienne.
+          J’adore raconter des histoires visuelles claires qui mettent en valeur les paysages et projets de l’Abitibi-Témiscamingue.
+          Chaque mandat est l’occasion de livrer des images précises, professionnelles et adaptées à vos besoins.
+        </p>
+      </div>
+      <figure>
+        <img src="photos/davidvendette.jpg" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
+      </figure>
+    </section>
+ 
     <section id="contact" style="margin-top:32px">
       <h2 style="margin:0 0 8px 0;font-size:20px">Contact</h2>
       <p style="color:var(--muted);margin:0 0 12px 0">
