Add header banner image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       background:linear-gradient(180deg,var(--bg) 0%,#263321 100%);color:var(--text);}
     a{color:inherit;text-decoration:none}
+    .banner{width:100%;overflow:hidden;border-block:1px solid #233225;
+      box-shadow:0 10px 24px rgba(0,0,0,.35)}
+    .banner img{display:block;width:100%;height:280px;object-fit:cover}
     .container{max-width:1100px;margin-inline:auto;padding:24px}
     .nav{display:flex;gap:20px;align-items:center;justify-content:space-between}
     .brand{display:flex;align-items:center;gap:12px;font-weight:700}
@@ -61,6 +64,7 @@
     @media (max-width: 900px){ .card{grid-column: span 6} }
     @media (max-width: 640px){ .card{grid-column: span 12} .nav{gap:12px} }
     @media (max-width: 768px) {
+      .banner img{height:200px}
       .gallery {
         grid-template-columns: 1fr;   /* une seule colonne sur petits écrans */
         justify-items: center;        /* centre le contenu si la largeur est limitée */
@@ -87,6 +91,10 @@
       <a class="pill" href="#contact">Contact</a>
     </nav>
   </header>
+
+  <div class="banner" role="presentation">
+    <img src="photos/header.jpg" alt="Paysage aérien capturé par DV Drone" width="1600" height="900" />
+  </div>
 
   <main class="container">
     <section class="hero" id="hero">
