--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
         <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
       </div>
       <div class="card">
-        <h3>🗺️ Orthomosaïque (base)</h3>
-        <p>Prise de vues nadir et assemblage pour une vue d’ensemble. Utile pour illustrer un terrain (sans analyse cadastrale).</p>
+        <h3>🗺️ Orthophoto</h3>
+        <p>Photo orthogonale obtenue à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain. Découvrez un
+          exemple dans la <a href="demo-photogrammetrie.html" style="color:var(--accent)">démo photogrammétrie</a>.</p>
       </div>
       <div class="card">
         <h3>🎥 Vidéo courte</h3>
