--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
     .btn.primary{background:linear-gradient(135deg,var(--accent),var(--ring));
       color:#0f1c0f;border:none;font-weight:700;box-shadow:0 14px 32px rgba(0,0,0,.45)}
     .grid{display:grid;gap:16px;grid-template-columns:repeat(12,1fr)}
-    .card{grid-column: span 4; background:linear-gradient(135deg,rgba(169,196,138,.06),rgba(27,38,24,.9));
+    .card{display:block;grid-column: span 4; background:linear-gradient(135deg,rgba(169,196,138,.06),rgba(27,38,24,.9));
       border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:18px;
       box-shadow:0 14px 32px rgba(0,0,0,.45)}
     .card h3{margin:0 0 6px 0;font-size:16px}
     .card p{margin:0;color:var(--muted);font-size:14px}
+    .card.clickable{transition:transform .18s ease, border-color .18s ease, box-shadow .18s ease}
+    .card.clickable:hover{border-color:rgba(169,196,138,.35);transform:translateY(-3px);box-shadow:0 18px 36px rgba(0,0,0,.5)}
     .gallery{display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin-top:10px}
     .ph{aspect-ratio:4/3;background:#142014;border:1px solid rgba(255,255,255,.08);
       border-radius:12px;position:relative;overflow:hidden;box-shadow:0 10px 26px rgba(0,0,0,.4)}
@@ -123,11 +125,10 @@
         <h3>📸 Photos aériennes</h3>
         <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
       </div>
-      <div class="card">
+      <a class="card clickable" href="demo-photogrammetrie.html">
         <h3>🗺️ Orthophoto</h3>
-        <p>Photo orthogonale issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain. Découvrez un
-          exemple dans la <a href="demo-photogrammetrie.html" style="color:var(--accent)">démo photogrammétrie</a>.</p>
-      </div>
+        <p>Photo orthogonale issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
+      </a>
       <div class="card">
         <h3>🎥 Vidéo courte</h3>
         <p>Survol de 30–60 s pour médias sociaux. Stabilisation et titre simple inclus.</p>
