Add Upper Beaver gallery and update photo assets
Added a new unlisted gallery page for Upper Beaver with 18 aerial images. Updated index.html to reference new and reorganized portfolio images, replaced 'davidvendette.jpg' with 'dv-01.jpg', and moved/added several photo assets to the portfolio directory for better organization.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </p>
       </div>
       <figure>
-        <img src="photos/davidvendette.jpg" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
+        <img src="photos/dv-01.jpg" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
       </figure>
     </section>
  
@@ -186,26 +186,26 @@
   <script>
     window.PHOTOS = [
 	{
-    	"src": "photos/uqat-01.jpg",
+    	"src": "portfolio/uqat-01.jpg",
     	"alt": "UQAT campus de Rouyn-Noranda",
     	"w": 1600,
     	"h": 1067
   	},
       {
-      "src": "photos/maison-lac.jpg",
-      "alt": "Vue aérienne d’une maison au bord d’un lac",
+      "src": "portfolio/uqat-02.jpg",
+      "alt": "UQAT centre du Témiscamingue",
       "w": 1600,
       "h": 1067
       },
       {
-      "src": "photos/lac-paddle.jpg",
-      "alt": "Survol d'un lac pendant une activité de paddle board",
+      "src": "portfolio/lac-paddle-01.jpg",
+      "alt": "Survol pendant une activité de paddle board",
       "w": 1600,
       "h": 1067
       },
       {
-      "src": "photos/pont-couvert-normetal.jpg",
-      "alt": "Pont couvert en bois au-dessus d’une rivière entourée d’arbres",
+      "src": "portfolio/pont-normetal-01.jpg",
+      "alt": "Pont couvert à Normétal",
       "w": 1600,
       "h": 1067
       }
