Add aerial photos gallery and link from homepage

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
     </section>
 
     <section id="services" class="grid" aria-label="Services">
-      <div class="card">
+      <a class="card clickable" href="photos-aeriennes.html">
         <h3>📸 Photos aériennes</h3>
         <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
-      </div>
+      </a>
       <a class="card clickable" href="demo-photogrammetrie.html">
         <h3>🗺️ Orthophoto</h3>
         <p>Photo orthogonale issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
@@ -138,12 +138,15 @@
     <section id="portfolio" style="margin-top:28px">
       <h2 style="margin:0 0 12px 0;font-size:20px">Aperçu de réalisations</h2>
       <p style="color:var(--muted);margin:0 0 16px 0">
-        Quelques exemples de captations aériennes. 
-        Découvrez davantage de contenus sur 
-        <a href="https://facebook.com/dvdrone.abitibi" target="_blank" style="color:var(--accent)">Facebook</a> 
-        et 
+        Quelques exemples de captations aériennes.
+        Découvrez davantage de contenus sur
+        <a href="https://facebook.com/dvdrone.abitibi" target="_blank" style="color:var(--accent)">Facebook</a>
+        et
         <a href="https://instagram.com/dvdrone" target="_blank" style="color:var(--accent)">Instagram</a>.
       </p>
+      <div class="cta" style="justify-content:flex-start;margin-bottom:10px">
+        <a class="btn" href="photos-aeriennes.html">Voir la galerie photos aériennes</a>
+      </div>
       <!-- Conteneur vide, rempli dynamiquement par gallery.js -->
       <div id="gallery" class="gallery"></div>
     </section>
