Update aerial photos gallery content and descriptions
Revised the lead and meta descriptions in photos-aeriennes.html for improved clarity and regional context. Updated the gallery image list with new photos, reordered entries, and provided more specific alt texts. Minor HTML structure adjustment in index.html to move the gallery container above the call-to-action.

--- a/photos-aeriennes.html
+++ b/photos-aeriennes.html
@@ -158,8 +158,10 @@
   <main class="page">
     <header>
       <h1>Photos aériennes</h1>
-      <p class="lead">Sélection de prises de vue réalisées pour des projets résidentiels, corporatifs et touristiques. Cliquez sur une image pour l'agrandir.</p>
-      <div class="meta">Galerie publique répertoriée depuis la page d'accueil.</div>
+      <p class="lead">
+      Sélection de prises de vue aériennes réalisées dans le cadre de projets résidentiels, corporatifs et touristiques en Abitibi-Témiscamingue.
+    </p>
+    <div class="meta">Exemples de réalisations</div>
     </header>
 
     <section id="gallery" aria-label="Galerie des photos aériennes"></section>
@@ -173,26 +175,26 @@
   </main>
   <script>
     window.PHOTOS = [
-      { src: "portfolio/portfolio-01.jpg", alt: "Propriété au bord d'un lac au coucher du soleil" },
-      { src: "portfolio/portfolio-02.jpg", alt: "Vue aérienne hivernale sur un secteur forestier" },
-      { src: "portfolio/portfolio-03.jpg", alt: "Maison de campagne entourée d'arbres" },
-      { src: "portfolio/portfolio-04.jpg", alt: "Chantier de construction résidentiel" },
-      { src: "portfolio/portfolio-06.jpg", alt: "Quartier résidentiel et route sinueuse" },
-      { src: "portfolio/portfolio-07.jpg", alt: "Lac bordé par une plage sablonneuse" },
-      { src: "portfolio/portfolio-09.jpg", alt: "Vue aérienne d'un quartier boisé" },
-      { src: "portfolio/portfolio-10.jpg", alt: "Maison près d'une baie" },
-      { src: "portfolio/portfolio-11.jpg", alt: "Terrain dégagé au bord d'un lac" },
-      { src: "portfolio/portfolio-13.jpg", alt: "Vue d'ensemble d'une propriété avec entrée privée" },
-      { src: "portfolio/portfolio-14.jpg", alt: "Bâtiments industriels près d'un terrain déboisé" },
-      { src: "portfolio/portfolio-18.jpg", alt: "Maison et cour arrière verdoyante" },
-      { src: "portfolio/portfolio-19.jpg", alt: "Vue aérienne sur un quartier ensoleillé" },
-      { src: "portfolio/portfolio-20.jpg", alt: "Maison isolée au milieu des arbres" },
-      { src: "portfolio/portfolio-21.jpg", alt: "Camp forestier et chemin de terre" },
-      { src: "portfolio/lac-paddle-01.jpg", alt: "Balade en planche sur un lac à la tombée du jour" },
+      { src: "portfolio/portfolio-21.jpg", alt: "Rouyn-Noranda, Qc" },
+      { src: "portfolio/uqat-01.jpg", alt: "UQAT campus de Rouyn-Noranda" },
+      { src: "portfolio/uqat-02.jpg", alt: "UQAT centre du Témiscamingue" },
+      { src: "portfolio/portfolio-01.jpg", alt: "Vue aérienne d'un stationnement" },
+      { src: "portfolio/portfolio-02.jpg", alt: "Lac Édouard, Parc à fleur d'eau, Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-03.jpg", alt: "Tour d'observation Le Nid de l'épervier, Collines Kékéko" },
+      { src: "portfolio/portfolio-04.jpg", alt: "Parc de la ribambelle, Ville-Marie, Qc" },
+      { src: "portfolio/portfolio-06.jpg", alt: "Pont courvert, St-Eugène de Guigues, Qc" },
+      { src: "portfolio/portfolio-07.jpg", alt: "Lac Osisko, Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-09.jpg", alt: "Hôpital de Rouyn-Noranda" },
+      { src: "portfolio/portfolio-10.jpg", alt: "Sentiers du lac Rouyn, Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-11.jpg", alt: "Lac Beaverhouse, Dobie, ON" },
+      { src: "portfolio/portfolio-13.jpg", alt: "Terrain en reboisement" },
+      { src: "portfolio/portfolio-14.jpg", alt: "Sentier sinueux en gravier" },
+      { src: "portfolio/portfolio-18.jpg", alt: "Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-19.jpg", alt: "UQAT au coucher du soleil" },
+      { src: "portfolio/portfolio-20.jpg", alt: "Avenue Larrivière, Rouyn-Noranda, Qc" },
+      { src: "portfolio/lac-paddle-01.jpg", alt: "Journée de paddle board" },
       { src: "portfolio/maison-lac.jpg", alt: "Résidence en bordure d'un lac" },
-      { src: "portfolio/pont-normetal-01.jpg", alt: "Pont couvert à Normétal" },
-      { src: "portfolio/uqat-01.jpg", alt: "Campus de l'UQAT à Rouyn-Noranda" },
-      { src: "portfolio/uqat-02.jpg", alt: "Centre de l'UQAT au Témiscamingue" }
+      { src: "portfolio/pont-normetal-01.jpg", alt: "Pont couvert, Normétal, Qc" }
     ];
   </script>
   <script src="gallery.js"></script>
