--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -45,6 +45,16 @@
       gap: 1rem;
     }
 
+    .site-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      padding: 10px 6px 12px;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      flex-wrap: wrap;
+    }
+
     .back {
       color: var(--muted);
       text-decoration: none;
@@ -64,26 +74,48 @@
     }
 
     .brand {
-      display: inline-flex;
+      display: flex;
       align-items: center;
-      gap: 0.75rem;
-      margin: 0.3rem 0 0.4rem;
+      gap: 12px;
+      font-weight: 700;
     }
 
-    .brand img {
-      width: min(120px, 35vw);
-      height: auto;
-      display: block;
+    .brand .logo {
+      width: 36px;
+      height: 36px;
+      border-radius: 10px;
+      background: linear-gradient(135deg, var(--accent), #8ab570);
+      display: grid;
+      place-items: center;
+      color: #0f1c0f;
+      font-weight: 800;
     }
 
     .brand-name {
-      font-size: clamp(20px, 6vw, 30px);
-      margin: 0 0 8px;
+      font-size: clamp(18px, 5vw, 22px);
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       font-weight: 700;
       color: var(--text);
-      text-transform: uppercase;
-      white-space: nowrap;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 6px 10px;
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      border-radius: 999px;
+      color: var(--muted);
+      font-size: 12px;
+      background: rgba(169, 196, 138, 0.08);
     }
 
     .header h1 {
@@ -289,6 +321,17 @@
 </head>
 <body>
   <div class="page">
+    <header class="site-header">
+      <div class="brand" aria-label="DV Drone">
+        <div class="logo" aria-hidden>DV</div>
+        <span class="brand-name">DV Drone · Imagerie aérienne</span>
+      </div>
+      <nav class="nav-links" aria-label="Navigation principale">
+        <a class="pill" href="index.html#services">Services</a>
+        <a class="pill" href="photos-aeriennes.html">Portfolio</a>
+        <a class="pill" href="index.html#contact">Contact</a>
+      </nav>
+    </header>
     <a href="index.html" class="back">← Retour à l'accueil</a>
     <!--
     <div class="brand">
