--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
     body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       background:radial-gradient(circle at top left,var(--bg2),var(--bg1));color:var(--text);}
     a{color:inherit;text-decoration:none}
-    .banner{width:100%;overflow:hidden;border-block:1px solid rgba(255,255,255,.08);
-      box-shadow:0 10px 28px rgba(0,0,0,.45)}
-    .banner img{display:block;width:100%;height:220px;object-fit:cover}
     .container{max-width:1100px;margin-inline:auto;padding:24px}
-    .nav{display:flex;gap:20px;align-items:center;justify-content:space-between}
+    .site-header{display:flex;gap:20px;align-items:center;justify-content:space-between;padding:16px 0 14px;
+      border-bottom:1px solid rgba(255,255,255,.08);margin-bottom:10px;flex-wrap:wrap}
     .brand{display:flex;align-items:center;gap:12px;font-weight:700}
     .brand .logo{width:36px;height:36px;border-radius:10px;
       background:linear-gradient(135deg,var(--accent),var(--ring));
@@ -88,21 +86,17 @@
   </style>
 </head>
 <body>
-  <header class="container nav">
+  <header class="container site-header">
     <div class="brand" aria-label="DV Drone">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
     </div>
     <nav style="display:flex;gap:12px;align-items:center">
-      <a class="pill" href="#services">Services</a>
-      <a class="pill" href="#portfolio">Portfolio</a>
-      <a class="pill" href="#contact">Contact</a>
+      <a class="pill" href="index.html#services">Services</a>
+      <a class="pill" href="photos-aeriennes.html">Portfolio</a>
+      <a class="pill" href="index.html#contact">Contact</a>
     </nav>
   </header>
-
-  <div class="banner" role="presentation">
-    <img src="photos/header.jpg" alt="Paysage aérien capturé par DV Drone" width="1600" height="900" />
-  </div>
 
   <main class="container">
     <section class="hero" id="hero">
