--- a/upper-beaver-galerie.html
+++ b/upper-beaver-galerie.html
@@ -41,7 +41,55 @@
       border-radius: 14px;
     }
 
-    header {
+    .site-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      padding: 10px 6px 16px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      margin-bottom: 14px;
+      flex-wrap: wrap;
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-weight: 700;
+    }
+
+    .brand .logo {
+      width: 36px;
+      height: 36px;
+      border-radius: 10px;
+      background: linear-gradient(135deg, var(--accent), #8ab570);
+      display: grid;
+      place-items: center;
+      color: #0f1c0f;
+      font-weight: 800;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 6px 10px;
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      border-radius: 999px;
+      color: var(--muted);
+      font-size: 12px;
+      background: rgba(169, 196, 138, 0.08);
+    }
+
+    .page-header {
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -156,7 +204,18 @@
 </head>
 <body>
   <main class="page">
-    <header>
+    <header class="site-header">
+      <div class="brand" aria-label="DV Drone">
+        <div class="logo" aria-hidden>DV</div>
+        <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
+      </div>
+      <nav class="nav-links" aria-label="Navigation principale">
+        <a class="pill" href="index.html#services">Services</a>
+        <a class="pill" href="photos-aeriennes.html">Portfolio</a>
+        <a class="pill" href="index.html#contact">Contact</a>
+      </nav>
+    </header>
+    <header class="page-header">
       <h1>Galerie Upper Beaver</h1>
       <p class="lead">Sélection d'images aériennes captées à Upper Beaver. Les images sont présentées à taille généreuse pour une visualisation complète.</p>
       <div class="meta">Page non répertoriée – partage direct par URL uniquement.</div>
