Add shared headers and update portfolio link

--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -45,6 +45,66 @@
       gap: 1rem;
     }
 
+    .site-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      padding: 6px 2px 12px;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+    }
+
+    .brand {
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+      font-weight: 700;
+      font-size: 16px;
+    }
+
+    .brand .logo {
+      width: 36px;
+      height: 36px;
+      border-radius: 10px;
+      background: linear-gradient(135deg, var(--accent), #8ab570);
+      display: grid;
+      place-items: center;
+      color: #0f1c0f;
+      font-weight: 800;
+      letter-spacing: -0.02em;
+    }
+
+    .brand span { color: var(--muted); font-weight: 500; }
+
+    .pill-nav {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 12px;
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      border-radius: 999px;
+      color: var(--muted);
+      font-size: 13px;
+      background: rgba(169, 196, 138, 0.08);
+      text-decoration: none;
+      transition: transform 0.15s ease, border-color 0.15s ease, box-shadow 0.15s ease;
+    }
+
+    .pill:hover {
+      border-color: rgba(169, 196, 138, 0.38);
+      color: #f5f7f5;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.32);
+      transform: translateY(-1px);
+    }
+
     .back {
       color: var(--muted);
       text-decoration: none;
@@ -61,29 +121,6 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-    }
-
-    .brand {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.75rem;
-      margin: 0.3rem 0 0.4rem;
-    }
-
-    .brand img {
-      width: min(120px, 35vw);
-      height: auto;
-      display: block;
-    }
-
-    .brand-name {
-      font-size: clamp(20px, 6vw, 30px);
-      margin: 0 0 8px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      font-weight: 700;
-      color: var(--text);
-      text-transform: uppercase;
-      white-space: nowrap;
     }
 
     .header h1 {
@@ -289,6 +326,17 @@
 </head>
 <body>
   <div class="page">
+    <div class="site-header">
+      <div class="brand" aria-label="DV Drone">
+        <div class="logo" aria-hidden>DV</div>
+        <div>DV Drone <span>· Imagerie aérienne</span></div>
+      </div>
+      <nav class="pill-nav" aria-label="Navigation principale">
+        <a class="pill" href="index.html#services">Services</a>
+        <a class="pill" href="photos-aeriennes.html">Portfolio</a>
+        <a class="pill" href="mailto:info@dvdrone.ca">Contact</a>
+      </nav>
+    </div>
     <a href="index.html" class="back">← Retour à l'accueil</a>
     <!--
     <div class="brand">
