--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <nav style="display:flex;gap:12px;align-items:center">
       <a class="pill" href="#services">Services</a>
-      <a class="pill" href="#portfolio">Portfolio</a>
+      <a class="pill" href="photos-aeriennes.html">Portfolio</a>
       <a class="pill" href="#contact">Contact</a>
     </nav>
   </header>
